# AI-on-the-edge-device

./: .gitignore  .gitmodules  Changelog.md  DS18B20_ROM_SEARCH_BEHAVIOR.md  FeatureRequest.md  LICENSE  Licence.md  License-DRAFT.md  README.md  REED_CONTACT_SUPPORT.md  SENSOR_IMPLEMENTATION_SUMMARY.md  index.html  pmd-effnet-zca.ipynb
code/: code  (+29 more)
code/components/esp-fatfs/: CMakeLists.txt  README.md
code/components/esp-fatfs/diskio/: diskio_impl_mh.h  diskio_mh.c  diskio_rawflash_mh.c  diskio_sdmmc_mh.c  diskio_sdmmc_mh.h  diskio_wl_mh.c
code/components/esp-fatfs/port/freertos/: ffsystem_mh.c
code/components/esp-fatfs/src/: diskio_mh.c  diskio_mh.h  ff_mh.c  ff_mh.h  ffconf_mh.h  ffsystem_mh.c  ffunicode_mh.c
code/components/esp-fatfs/vfs/: esp_vfs_fat_mh.h  vfs_fat_internal_mh.h  vfs_fat_mh.c  vfs_fat_sdmmc_mh.c  vfs_fat_spiflash_mh.c
code/components/esp-nn/: CMakeLists.txt  Kconfig.projbuild  README.md
code/components/esp-nn/include/: esp_nn.h  esp_nn_ansi_c.h  esp_nn_ansi_headers.h  esp_nn_esp32.h  esp_nn_esp32s3.h
code/components/esp-nn/src/activation_functions/: esp_nn_relu_ansi.c
code/components/esp-nn/src/basic_math/: esp_nn_add_ansi.c  esp_nn_mul_ansi.c
code/components/esp-nn/src/common/: common_functions.h
code/components/esp-nn/src/convolution/: esp_nn_conv_ansi.c  esp_nn_conv_esp32s3.c  esp_nn_conv_opt.c  esp_nn_depthwise_conv_ansi.c  esp_nn_depthwise_conv_opt.c  esp_nn_depthwise_conv_s8_esp32s3.c
code/components/esp-nn/src/fully_connected/: esp_nn_fully_connected_ansi.c
code/components/esp-nn/src/pooling/: esp_nn_avg_pool_ansi.c  esp_nn_max_pool_ansi.c
code/components/esp-nn/src/softmax/: softmax_common.h
code/components/esp-nn/test_app/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
code/components/esp-nn/test_app/main/: CMakeLists.txt  component.mk  main.c
code/components/esp-nn/tests/: CMakeLists.txt  README.md  component.mk
code/components/esp-nn/tests/include/: test_functions.h  test_utils.h
code/components/esp-nn/tests/src/: basic_math_test.c  convolution_test.c  fully_connected_test.c  pooling_test.c  relu_test.c  softmax_test.c
code/components/esp-sdmmc/: CMakeLists.txt  README.md  sdmmc_cmd_mh.c  sdmmc_common_mh.c  sdmmc_common_mh.h  sdmmc_init_mh.c  sdmmc_io_mh.c  sdmmc_mmc_mh.c  sdmmc_sd_mh.c
code/components/esp-sdmmc/include/: sdmmc_cmd_mh.h
code/components/jomjol_controlGPIO/: CMakeLists.txt  Color.cpp  Color.h  RmtDriver.h  RmtDriver4.cpp  RmtDriver4.h  RmtDriver5.cpp  RmtDriver5.h  SmartLeds.cpp  SmartLeds.h  ds18b20.c  onewire_bus.c  onewire_bus_rmt.c  onewire_bus_rmt.h  server_GPIO.cpp  server_GPIO.h  server_GpioHandler.cpp  server_GpioHandler.h  server_GpioPin.cpp  server_GpioPin.h
code/components/jomjol_controlcamera/: CMakeLists.txt  ClassControllCamera.cpp  ClassControllCamera.h  camera_config.h  camera_define._h_  esp_camera._h_  img_converters.h  ov2640_contrast_brightness.cpp  ov2640_contrast_brightness.h  ov2640_sharpness.cpp  ov2640_sharpness.h  ov2640_specialEffect.cpp  ov2640_specialEffect.h  ov5640_autofocus.cpp  ov5640_autofocus.h  ov5640_autofocus_config.h  server_camera.cpp  server_camera.h
code/components/jomjol_fileserver_ota/: CMakeLists.txt  md5.c  md5.cpp  md5.h  miniz.c  miniz.h  minizip.c  minizip.h  server_file.cpp  server_file.h  server_help.cpp  server_help.h  server_ota.cpp  server_ota.h
code/components/jomjol_fileserver_ota/miniz/: miniz.h  readme2.md
code/components/jomjol_network/: CMakeLists.txt  basic_auth.cpp  basic_auth.h  connect_eth.cpp  connect_eth.h  connect_wifi_sta.cpp  connect_wifi_sta.h  connect_wlan.cpp  connect_wlan.h  read_network_config.cpp  read_network_config.h  read_wlanini.cpp  read_wlanini.h  server_main.cpp  server_main.h  softAP.cpp  softAP.h  start_wifi_ap.cpp  start_wifi_ap.h
code/components/jomjol_tfliteclass/: CMakeLists.txt  CTfLiteClass._h_old  CTfLiteClass.cpp  CTfLiteClass.h  server_tflite.cpp  server_tflite.h
code/components/mdns/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  mdns.c  mdns_console.c  mdns_mem_caps.c  mdns_networking_lwip.c  mdns_networking_socket.c  mem_prefix_script.py
code/components/mdns/examples/query_advertise/: CMakeLists.txt  README.md  pytest_mdns.py  sdkconfig.ci.eth_custom_netif  sdkconfig.ci.eth_no_ipv4  sdkconfig.ci.eth_no_ipv6
code/components/mdns/examples/query_advertise/main/: idf_component.yml  mdns_example_main.c
code/components/mdns/include/: mdns.h
code/components/mdns/private_include/: mdns_mem_caps.h  mdns_networking.h  mdns_private.h
code/components/mdns/tests/host_test/: CMakeLists.txt  README.md  dnsfixture.py  pytest_mdns.py  sdkconfig.ci.app  sdkconfig.ci.console  sdkconfig.defaults
code/components/mdns/tests/host_test/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
code/components/mdns/tests/test_afl_fuzz_host/: README.md  esp32_mock.c  esp32_mock.h  esp_attr.h  esp_netif_mock.c  mdns_di.h  mdns_mock.h  sdkconfig.h  test.c
code/components/mdns/tests/test_apps/: CMakeLists.txt  README.md  pytest_mdns_app.py  sdkconfig.ci
code/components/mdns/tests/test_apps/main/: Kconfig.projbuild  main.c  mdns_test.c
code/components/mdns/tests/unit_test/: CMakeLists.txt  pytest_app_mdns.py  sdkconfig.ci
code/components/mdns/tests/unit_test/main/: CMakeLists.txt  test_mdns.c
code/components/tflite-lib/: CMakeLists.txt
code/components/tflite-lib/tensorflow/lite/kernels/: op_macros.h
code/components/tflite-lib/tensorflow/lite/micro/: all_ops_resolver.cc  fake_micro_context.cc  fake_micro_context.h  flatbuffer_utils.h  ibuffer_allocator.h  memory_helpers.cc  micro_allocation_info.cc  micro_allocation_info.h  micro_allocator.cc  micro_allocator.h  micro_context.cc  micro_context.h  micro_error_reporter.h  micro_graph.cc  micro_interpreter.cc  micro_interpreter.h  micro_mutable_op_resolver.h  micro_profiler.cc  micro_profiler.h  micro_resource_variable.cc  micro_resource_variable.h  micro_time.cc  micro_utils.cc  mock_micro_graph.cc  recording_micro_allocator.cc  recording_micro_allocator.h  recording_micro_interpreter.h  (+8 more)
(+934 files in other folders)
